# quant-agent

./: .gitignore  README.md
quant-agent/: .gitignore  README.md  alembic.ini  pyproject.toml
quant-agent/.github/workflows/: ci.yml
quant-agent/alembic/: env.py
quant-agent/alembic/versions/: 20260411_0001_initial_schema.py  20260411_0002_add_recommendation_analysis.py  20260411_0003_add_holding_watch.py  20260411_0004_add_source_snapshots.py  20260411_0005_add_holding_sell_controls.py  20260411_0006_add_trade_ledger.py  20260411_0007_add_strategy_configs.py  20260411_0008_add_order_execution_mode.py  20260411_0009_add_sell_execution_audits.py  20260411_0010_add_system_cycle_runs.py  20260411_0011_add_sell_alert_audits.py  20260411_0012_add_holding_control_audits.py  20260411_0013_add_system_event_records.py  20260411_0014_add_autopilot_policies.py  20260411_0015_add_autopilot_market_hours_gate.py  20260411_0016_add_autopilot_daily_budgets.py  20260411_0017_add_autopilot_rebuy_cooldown.py  20260411_0018_add_autopilot_snapshot_quality_gate.py  20260411_0019_add_autopilot_open_risk_gate.py  20260411_0020_add_autopilot_snapshot_freshness_gate.py  20260411_0021_add_autopilot_daily_loss_gate.py  20260411_0022_add_autopilot_order_dedupe.py  20260411_0023_add_autopilot_sell_alert_cooldown.py  20260411_0024_add_execution_source_provenance.py  20260411_0025_add_autopilot_price_drift_gate.py  20260411_0026_add_position_reconciliations.py  20260411_0027_add_autopilot_reconciliation_gate.py  20260411_0028_add_order_idempotency.py  20260411_0029_add_sell_idempotency.py  20260411_0030_dedupe_snapshot_bars.py  20260411_0031_add_market_data_provenance.py  20260411_0032_add_paper_shadow_gate.py  20260411_0033_add_portfolio_risk_reservations.py  20260411_0034_add_operational_observability.py  20260411_0035_immutable_market_bar_content.py
quant-agent/apps/api/: auth.py  dependencies.py  main.py  state_autopilot.py  state_autopilot_gates.py  state_order_replay.py  state_orders.py  state_portfolio.py  state_sell_sync.py  state_sells.py  state_trading.py
quant-agent/apps/dashboard/: README.md  home_page.py  main.py
quant-agent/apps/worker/: automation.py  automation_helpers.py  broker_cycles.py  cli.py  main.py
quant-agent/docs/: optimization_acceptance.md
quant-agent/docs/prd/: README.md
quant-agent/docs/runbooks/: daily_operations.md
quant-agent/domain/entities/: models.py
quant-agent/domain/policies/: rules.py  (+1 more)
quant-agent/infra/: config.py
quant-agent/prompts/: add_regression_replay_tests.md  build_feature_engine.md  create_fastapi_service.md  create_paper_trading_router.md  implement_market_ingestion.md  implement_recommendation_builder.md
quant-agent/scripts/: check_core_module_size.py  manage_api_launchd.py  manage_database.py  manage_launchd.py  validate_point_in_time_data.py
quant-agent/tests/: conftest.py
(+86 files in other folders)
