[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-agent"
version = "0.1.0"
description = "PRD-aligned quant research and trading recommendation platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "sqlalchemy>=2.0.30",
  "alembic>=1.13.2"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "httpx>=0.27.0",
  "pytest-cov>=5.0.0"
]
vendors = [
  "yfinance>=0.2.58",
  "pandas>=2.2.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "domain*", "infra*", "services*"]
