[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-agent"
version = "0.1.0"
description = "PRD-aligned quant research and trading recommendation platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "sqlalchemy>=2.0.30",
  "alembic>=1.13.2",
  "exchange-calendars>=4.13.2,<5"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "httpx>=0.27.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.12.0",
  "mypy>=1.16.0"
]
vendors = [
  "yfinance>=0.2.58",
  "pandas>=2.2.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"apps/api/state_*.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
files = [
  "apps/api/auth.py",
  "apps/api/dependencies.py",
  "apps/worker/automation.py",
  "apps/worker/automation_helpers.py",
  "apps/worker/broker_cycles.py",
  "apps/worker/cli.py",
  "apps/worker/main.py",
  "infra/config.py",
  "infra/db/bar_content.py",
  "infra/db/order_unit_of_work.py",
  "infra/db/portfolio_risk_reservation.py",
  "infra/db/repositories.py",
  "infra/db/sell_unit_of_work.py",
  "infra/observability",
  "services/execution/broker_adapter.py",
  "services/execution/market_calendar.py",
  "services/ingestion/point_in_time_validator.py",
  "services/ingestion/vendors/yfinance_provider.py",
  "services/ranking/pipeline.py",
  "services/research/backtest_engine.py",
  "services/risk/engine.py"
]
follow_imports = "skip"
ignore_missing_imports = true
check_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
show_error_codes = true


[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "domain*", "infra*", "services*"]
